@@ -29,7 +29,7 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.lang.foreign.SegmentAllocator;
 import opengl.*;
 import static opengl.glut_h.*;
@@ -71,16 +71,15 @@ public class Teapot {
     }
 
     public static void main(String[] args) {
-        try (var scope = MemorySession.openConfined()) {
-            var allocator = SegmentAllocator.newNativeArena(scope);
-            var argc = allocator.allocate(C_INT, 0);
+        try (var arena = Arena.ofConfined()) {
+            var argc = arena.allocate(C_INT, 0);
             glutInit(argc, argc);
             glutInitDisplayMode(GLUT_DOUBLE() | GLUT_RGB() | GLUT_DEPTH());
             glutInitWindowSize(500, 500);
-            glutCreateWindow(allocator.allocateUtf8String("Hello Panama!"));
-            var teapot = new Teapot(allocator);
-            var displayStub = glutDisplayFunc$callback.allocate(teapot::display, scope);
-            var idleStub = glutIdleFunc$callback.allocate(teapot::onIdle, scope);
+            glutCreateWindow(arena.allocateUtf8String("Hello Panama!"));
+            var teapot = new Teapot(arena);
+            var displayStub = glutDisplayFunc$callback.allocate(teapot::display, arena);
+            var idleStub = glutIdleFunc$callback.allocate(teapot::onIdle, arena);
             glutDisplayFunc(displayStub);
             glutIdleFunc(idleStub);
             glutMainLoop();
