@@ -194,7 +194,7 @@ abstract class HeaderFileBuilder extends ClassSourceBuilder {
         append(fiName + " " + javaName + " () {\n");
         incrAlign();
         indent();
-        append("return " + fiName + ".ofAddress(" + javaName + "$get(), SegmentScope.global());\n");
+        append("return " + fiName + ".ofAddress(" + javaName + "$get(), Arena.global());\n");
         decrAlign();
         indent();
         append("}\n");
@@ -236,7 +236,7 @@ abstract class HeaderFileBuilder extends ClassSourceBuilder {
         indent();
         append(MEMBER_MODS);
         append(" final");
-        append(" OfAddress ");
+        append(" AddressLayout ");
         append(name);
         append(" = ");
         append(constants().addLayout(TypeImpl.PointerImpl.POINTER_LAYOUT).accessExpression());
